.k8s/production/ingresses/ingress-backend.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: koto-ingress1
  namespace: backend
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-prod
    # acme.cert-manager.io/http01-edit-in-place: "true"
    # cert-manager.io/issue-temporary-certificate: "true"
spec:
  tls:
  - hosts:
    - "central.peacenik.app"
    - "node1.peacenik.app"
    - "progresso-pg.peacenik.app"
    secretName: peacenik-tls-backend-new
  rules:
  - host: central.peacenik.app
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: user-hub-service
            port: 
              number: 12001
  - host: node1.peacenik.app
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: message-hub-service
            port:
              number: 12002
  - host: progresso-pg.peacenik.app
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: pgadmin
            port:
              number: 80
